add ipython notebook

--- a/notebook/CBAC/data_prep/1_Create_dataset_4_ml_classification.ipynb
+++ b/notebook/CBAC/data_prep/1_Create_dataset_4_ml_classification.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -13,8 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 52,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -32,6 +37,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -47,8 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 53,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -67,6 +77,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -77,8 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 54,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -148,6 +163,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -158,23 +175,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-f59d86524535>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol_drop\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"target\"\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"target\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"immediate_extubation\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"secondary_intubation\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"unsuccessful IE\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>immediate_extubation</th>\n",
+       "      <th>secondary_intubation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>successful IE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>successful IE</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>successful IE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>successful IE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>successful IE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          target  immediate_extubation  secondary_intubation\n",
+       "0  successful IE                   0.0                   0.0\n",
+       "1  successful IE                   1.0                   0.0\n",
+       "2  successful IE                   0.0                   0.0\n",
+       "3  successful IE                   0.0                   0.0\n",
+       "4  successful IE                   0.0                   0.0"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -182,16 +265,19 @@
     "data.columns = [i.lower() for i in data.columns]\n",
     "\n",
     "data[\"target\"]  = np.nan\n",
-    "data[\"target\"][(data[\"immediate_extubation\"] == 1) & (data[\"secondary_intubation\"] == 1)] = \"unsuccessful IE\"\n",
-    "data[\"target\"][(data[\"immediate_extubation\"] == 1) & (data[\"secondary_intubation\"] == 0)] = \"successful IE\"\n",
+    "data[\"target\"][(data[\"secondary_intubation\"] == 1)] = \"unsuccessful IE\"\n",
+    "data[\"target\"][(data[\"secondary_intubation\"] == 0)] = \"successful IE\"\n",
     "\n",
     "data[data.target.notnull()][['target', 'immediate_extubation', \"secondary_intubation\"]].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 56,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -207,11 +293,9 @@
       "effectif Auto IE 34\n",
       "\n",
       "\n",
-      "Missing values in the target \n",
-      " \n",
-      " immediate_extubation    1\n",
+      "('Missing values in the target \\n \\n', immediate_extubation    1\n",
       "secondary_intubation    3\n",
-      "dtype: int64\n"
+      "dtype: int64)\n"
      ]
     }
    ],
@@ -226,8 +310,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 57,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -239,15 +326,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### select subset of patients"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "metadata": {},
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "data = data[data.target.notnull()]"
@@ -255,16 +349,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Nombre de match entre les tables fct_ et dim_patient 74'"
+       "'Nombre de match entre les tables fct_ et dim_patient 355'"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,25 +379,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset shape :  (135, 43)\n"
+      "Dataset shape :  (408, 43)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "successful IE      88.148148\n",
-       "unsuccessful IE    11.851852\n",
+       "successful IE      87.745098\n",
+       "unsuccessful IE    12.254902\n",
        "Name: target, dtype: float64"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,8 +413,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "data = data.replace(\"NF\", np.nan)"
@@ -320,46 +426,46 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Export"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "data.to_csv('../../../data/data_merged.csv' , index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
