--- a/notebook/CBAC/ml/first_model.ipynb
+++ b/notebook/CBAC/ml/first_model.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -14,6 +16,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -26,6 +30,9 @@
    "cell_type": "code",
    "execution_count": 148,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -83,6 +90,9 @@
    "cell_type": "code",
    "execution_count": 149,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -108,6 +118,9 @@
    "cell_type": "code",
    "execution_count": 150,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -141,6 +154,9 @@
    "cell_type": "code",
    "execution_count": 151,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -154,6 +170,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -166,6 +184,9 @@
    "cell_type": "code",
    "execution_count": 152,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -192,6 +213,9 @@
    "cell_type": "code",
    "execution_count": 153,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -219,6 +243,9 @@
    "cell_type": "code",
    "execution_count": 154,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -236,6 +263,9 @@
    "cell_type": "code",
    "execution_count": 157,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -287,6 +317,9 @@
    "cell_type": "code",
    "execution_count": 163,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -320,6 +353,9 @@
    "cell_type": "code",
    "execution_count": 158,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -343,6 +379,9 @@
    "cell_type": "code",
    "execution_count": 159,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -365,7 +404,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Shap\n"
    ]
@@ -373,7 +415,11 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -452,7 +498,11 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -472,7 +522,11 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -491,7 +545,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The below explanation shows features each contributing to push the model output from the base value (the average model output over the training dataset we passed) to the model output. Features pushing the prediction higher are shown in red, those pushing the prediction lower are in blue"
    ]
@@ -499,7 +556,11 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -536,7 +597,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -573,7 +638,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -1293,7 +1362,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -1315,7 +1388,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -1337,7 +1414,11 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "ename": "ValueError",
@@ -1359,7 +1440,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Oneclass SVM Draft"
    ]
@@ -1367,7 +1451,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "X_scope = X[y == 1]\n",
@@ -1379,7 +1467,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "clf = svm.OneClassSVM(nu=0.1, kernel=\"rbf\", gamma=0.1)"
@@ -1388,7 +1480,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "clf.fit(X_scope, y_scope)\n",
@@ -1403,14 +1499,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "clf.fit(X_scope, y_scope)\n",
@@ -1425,7 +1529,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.manifold import TSNE\n",
@@ -1439,7 +1547,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "tsne_df = pd.DataFrame(tsne_result_scaled)"
@@ -1448,7 +1560,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -1460,7 +1576,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "X_train = tsne_df[y == 1]\n",
@@ -1472,7 +1592,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "print(__doc__)\n",
@@ -1495,49 +1619,77 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "def make_meshgrid(x, y, h=.02) :\n",
@@ -1560,7 +1712,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -1576,28 +1732,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1605,21 +1777,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "transplant",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "transplant"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
