edit static vs dynamic clean path

--- a/notebook/[TUTORIAL] How to load data.ipynb
+++ b/notebook/[TUTORIAL] How to load data.ipynb
@@ -11,21 +11,25 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "from transplant.config import PATH_STATIC_CLEAN, PATH_STATIC_CLEAN, DYNAMIC_CATEGORIES, DYNAMIC_CATEGORIES"
+    "from transplant.config import PATH_STATIC_CLEAN, PATH_DYNAMIC_CLEAN, DYNAMIC_CATEGORIES, DYNAMIC_CATEGORIES"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load the DataFrame\n",
     "df_static = pd.read_csv(PATH_STATIC_CLEAN)\n",
-    "df_dynamic = pd.read_csv(PATH_STATIC_CLEAN)"
+    "df_dynamic = pd.read_csv(PATH_DYNAMIC_CLEAN)"
    ]
   },
   {
@@ -1341,7 +1345,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1362,7 +1368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
