fix import on tutorial notebook

--- a/notebook/[TUTORIAL] How to load data.ipynb
+++ b/notebook/[TUTORIAL] How to load data.ipynb
@@ -16,7 +16,8 @@
    },
    "outputs": [],
    "source": [
-    "from transplant.config import PATH_STATIC_CLEAN, PATH_DYNAMIC_CLEAN, DYNAMIC_CATEGORIES, DYNAMIC_CATEGORIES"
+    "import pandas as pd\n",
+    "from transplant.config import PATH_STATIC_CLEAN, PATH_DYNAMIC_CLEAN, DYNAMIC_CATEGORIES, DYNAMIC_CATEGORIES, STATIC_CATEGORIES"
    ]
   },
   {
