Recyclage de mon notebook comparaison ML avec notre Train set

--- a/etudes/neural network/An even worst DNN.ipynb
+++ b/etudes/neural network/An even worst DNN.ipynb
@@ -194,89 +194,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from transplant.tools.dataset import Dataset "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "from transplant.tools.dataset import Dataset \n",
+    "\n",
     "dataset = Dataset()\n",
     "\n",
-    "train, test = dataset.get_static()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "train1=train.apply(pd.to_numeric,errors='coerce').dropna(1, how=\"all\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mean_train1 = train1.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "train1=train1.fillna(mean_train1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "test1=test.apply(pd.to_numeric,errors='coerce').dropna(1, how=\"all\").fillna(mean_train1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(['ATCD_chirugicaux'], [])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "train, test = dataset.get_static()\n",
+    "\n",
+    "train1=train.apply(pd.to_numeric,errors='coerce').dropna(1, how=\"all\")\n",
+    "\n",
+    "mean_train1 = train1.mean()\n",
+    "\n",
+    "train1=train1.fillna(mean_train1)\n",
+    "\n",
+    "test1=test.apply(pd.to_numeric,errors='coerce').dropna(1, how=\"all\").fillna(mean_train1)\n",
+    "\n",
     "drop_test1=[]\n",
     "drop_train1=[]\n",
     "\n",
@@ -287,76 +224,22 @@
     "for i in test1.columns :\n",
     "    if not(i in train1.columns) :\n",
     "        drop_test1+=[i]\n",
-    "drop_test1 , drop_train1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "drop_test1 , drop_train1\n",
+    "\n",
     "test1=test1.drop(drop_test1, axis=1)\n",
-    "train1=train1.drop(drop_train1, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((287, 36), (123, 36))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train1.shape, test1.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "train1=train1.drop(drop_train1, axis=1)\n",
+    "\n",
+    "train1.shape, test1.shape\n",
+    "\n",
     "train2=train1.drop(['target'], axis=1)\n",
-    "test2=test1.drop(['target'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "test2=test1.drop(['target'], axis=1)\n",
+    "\n",
     "mean_train2=train2.mean()\n",
     "std_train2=train2.std()\n",
     "\n",
     "train2=(train2-mean_train2)/std_train2\n",
-    "test2=(test2-mean_train2)/std_train2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "test2=(test2-mean_train2)/std_train2\n",
+    "\n",
     "dic_to_One_Hot = {0 : [1,0], 1 : [0,1]}\n",
     "\n",
     "X_train=np.array(train2)\n",
@@ -367,17 +250,8 @@
     "\n",
     "y_test_cls=test1['target']\n",
     "y_test=np.array(list(y_test_cls.map(dic_to_One_Hot)))\n",
-    "y_test_cls=np.array(y_test_cls)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "y_test_cls=np.array(y_test_cls)\n",
+    "\n",
     "from datetime import datetime\n",
     "\n",
     "now = datetime.utcnow().strftime(\"%Y%m%d%H%M%S\")\n",
@@ -395,7 +269,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n_inputs = X_train.shape[1]  \n",
